// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple mouse - continuous horizontal wheel Mac Chrome 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -713.4722900390625,
          0,
        ],
        "axisVelocity": Array [
          -1.9548461698762425,
          0,
        ],
        "debugData": null,
        "deltaTotal": -713.4722900390625,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        8,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -713.4722900390625,
          0,
        ],
        "axisVelocity": Array [
          -1.9548461698762425,
          0,
        ],
        "debugData": null,
        "deltaTotal": -713.4722900390625,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "ANY_WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        8,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`simple mouse - continuous horizontal wheel Mac FF 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -468,
          0,
        ],
        "axisVelocity": Array [
          -0.8977556109725686,
          0,
        ],
        "debugData": null,
        "deltaTotal": -468,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        8,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -468,
          0,
        ],
        "axisVelocity": Array [
          -0.8977556109725686,
          0,
        ],
        "debugData": null,
        "deltaTotal": -468,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "ANY_WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        8,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`simple mouse - continuous horizontal wheel Mac Safari 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -713.28125,
          0,
        ],
        "axisVelocity": Array [
          -1.9534027099609375,
          0,
        ],
        "debugData": null,
        "deltaTotal": -713.28125,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        8,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -713.28125,
          0,
        ],
        "axisVelocity": Array [
          -1.9534027099609375,
          0,
        ],
        "debugData": null,
        "deltaTotal": -713.28125,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "ANY_WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        8,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`simple mouse - continuous horizontal wheel Windows Chrome 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -900,
          0,
        ],
        "axisVelocity": Array [
          -1.4989881830374567,
          0,
        ],
        "debugData": null,
        "deltaTotal": -900,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        5,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -900,
          0,
        ],
        "axisVelocity": Array [
          -1.4989881830374567,
          0,
        ],
        "debugData": null,
        "deltaTotal": -900,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "ANY_WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        5,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`simple mouse - continuous horizontal wheel Windows Edge 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -1050,
          0,
        ],
        "axisVelocity": Array [
          -3.282129479414435,
          0,
        ],
        "debugData": null,
        "deltaTotal": -1050,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        6,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -1050,
          0,
        ],
        "axisVelocity": Array [
          -3.282129479414435,
          0,
        ],
        "debugData": null,
        "deltaTotal": -1050,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "ANY_WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        6,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`simple mouse - continuous horizontal wheel Windows FF 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -54,
          0,
        ],
        "axisVelocity": Array [
          -0.135,
          0,
        ],
        "debugData": null,
        "deltaTotal": -54,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        0,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -54,
          0,
        ],
        "axisVelocity": Array [
          -0.135,
          0,
        ],
        "debugData": null,
        "deltaTotal": -54,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "ANY_WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        0,
      ],
      "wheelType": "ANY_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -1296,
          0,
        ],
        "axisVelocity": Array [
          -0.5524296675191815,
          0,
        ],
        "debugData": null,
        "deltaTotal": -1296,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        1,
        24,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -1296,
          0,
        ],
        "axisVelocity": Array [
          -0.5524296675191815,
          0,
        ],
        "debugData": null,
        "deltaTotal": -1296,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "ANY_WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        1,
        24,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;
